moved skills and fixed columns, fixed jQuery date, border radius picture and fixed spacing in css

--- a/style.css
+++ b/style.css
@@ -1,53 +1,57 @@
 /* Layout */
 
 body {
-  font:normal 12px/1.6em Arial, Helvetica, sans-serif;
-	color:#2a3845;
-	margin:0;
-	padding:0;
-	background:#FFFFFF;
+  font: normal 12px/1.6em Arial, Helvetica, sans-serif;
+	color: #2a3845;
+	margin: 0;
+	padding: 0;
+	background: #FFFFFF;
   font-size: 12px;
 }
 
 p {
-	margin:0;
-	padding:0;
+	margin: 0;
+	padding: 0;
 }
 
 #wrapper {
-	margin:0 auto;
-	width:100%;
+	margin: 0 auto;
+	width: 100%;
   max-width: 800px;
-	border-left:1px solid #f0e9eb;
-	border-right:1px solid #f0e9eb;
+	border-left: 1px solid #f0e9eb;
+	border-right: 1px solid #f0e9eb;
 }
 
 #header {
-	margin:0 1px;
+	margin: 0 1px;
 }
 
 #bg {
-	height:36px;
-	background:url('') repeat-x;
+	height: 36px;
+	background: url('') repeat-x;
 }
 
 #main-content {
-	margin:0 auto;
+	margin: 0 auto;
   display: flex;
 }
 
 #main-image {
-	text-align:center;
+	text-align: center;
+}
+
+#main-image img {
+  border-radius: 5%;
 }
 
 #left-column {
 	width:calc(100% - 270px);
-	padding:0 30px 30px;
+	padding: 0 30px 30px;
   box-sizing: border-box;
 }
 
 #right-column {
-	width:270px;
+	width: 270px;
 }
 
 @media screen and (max-width: 800px) {
@@ -57,62 +61,62 @@ p {
 }
 
 .sidebar {
-	width:100%;
-	margin:0 auto;
-	padding:10px 25px;
+	width: 100%;
+	margin: 0 auto;
+	padding: 10px 25px;
   box-sizing: border-box;
-	background:url('http://img404.imageshack.us/img404/3092/shadowh.jpg') no-repeat top;
+	background: url('') no-repeat top;
 }
 
 #footer {
-	background:#f7f7f7;
-	border-top:1px solid #f0e9eb;
-	padding:10px 15px;
-	clear:both;
+	background: #f7f7f7;
+	border-top: 1px solid #f0e9eb;
+	padding: 10px 15px;
+	clear: both;
 }
 
 /* Global Styling */
 
 a:visited, a:link {
-	color:#a43b55;
-	text-decoration:underline;
-	background:none;
+	color: #a43b55;
+	text-decoration: underline;
+	background: none;
 }
 
 a:hover {
-	color:#a43b55;
-	text-decoration:none;
-	background:none;
+	color: #a43b55;
+	text-decoration: none;
+	background: none;
 }
 
 h1 {
-	color:#7a2e40;
-	margin:0 0 10px;
-	padding-bottom:10px;
-	font:normal 30px Georgia, serif;
-	border-bottom:1px solid #efece7;
+	color: #7a2e40;
+	margin: 0 0 10px;
+	padding-bottom: 10px;
+	font: normal 30px Georgia, serif;
+	border-bottom: 1px solid #efece7;
 }
 
 h2 {
-	color:#7a2e40;
-	margin:20px 0 10px;
-	padding-bottom:10px;
-	font:normal 17px Georgia, serif;
-	border-bottom:1px solid #efece7;
+	color: #7a2e40;
+	margin: 20px 0 10px;
+	padding-bottom: 10px;
+	font: normal 17px Georgia, serif;
+	border-bottom: 1px solid #efece7;
 }
 
 h3 {
-	color:#7a2e40;
-	margin:10px 0;
-	padding-bottom:10px;
-	font:bold 14px Arial, Helvetica, sans-serif;
-	border-bottom:1px solid #efece7;
+	color: #7a2e40;
+	margin: 10px 0;
+	padding-bottom: 10px;
+	font: bold 14px Arial, Helvetica, sans-serif;
+	border-bottom: 1px solid #efece7;
 }
 
 ul {
-	padding:0;
-	margin:0 0 0 17px;
-	list-style:square url('http://img525.imageshack.us/img525/1890/bulletr.gif');
+	padding: 0;
+	margin: 0 0 0 17px;
+	list-style: square;
 }
 
 .contact-link ul {
@@ -122,15 +126,15 @@ ul {
 
 .box {
 	background:#f7f7f7;
-	border:1px solid #f0e9eb;
-	padding:15px;
+	border: 1px solid #f0e9eb;
+	padding: 15px;
 }
 
 #nav {
-	background:#06a;
-	padding:10px 20px;
-	text-align:center;
-	color:#f6dde3;
+	background: #06a;
+	padding: 10px 20px;
+	text-align: center;
+	color: #f6dde3;
 }
 
 #nav a {
@@ -138,19 +142,19 @@ ul {
 }
 
 #nav a:visited, #nav a:link {
-	text-decoration:none;
-	color:#f6dde3;
+	text-decoration: none;
+	color: #f6dde3;
 }
 
 #nav a:hover {
-	text-decoration:underline;
-	color:#f6dde3;
+	text-decoration: underline;
+	color: #f6dde3;
 }
 
 #logo {
 	margin-bottom:20px;
-	font:normal 18px Georgia, serif;
-	color:#fa7393;
+	font: normal 18px Georgia, serif;
+	color: #fa7393;
 }
 
 
